Mosquitto MQTT with Docker; MQTT client; Output publishing; Debug and info file;

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -9,34 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
+monitor_speed = 115200
 
 [env:megaatmega2560]
 board = megaatmega2560
 platform = atmelavr
 framework = arduino
 upload_port = /dev/ttyUSB0
-build_flags =
-    -include "include/config.h"
-; upload_protocol = custom
-; upload_flags = 
-; 	-C
-; 	${platformio.packages_dir}/tool-avrdude/avrdude.conf
-; 	-p
-; 	$BOARD_MCU
-; 	-c
-; 	usbtiny
-; upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
-
-; [env:uno]
-; board = uno
-; platform = atmelavr
-; framework = arduino
-; upload_protocol = custom
-; upload_flags = 
-; 	-C
-; 	${platformio.packages_dir}/tool-avrdude/avrdude.conf
-; 	-p
-; 	$BOARD_MCU
-; 	-c
-; 	usbtiny
-; upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+build_flags = 
+	-include "include/config.h"
+lib_deps = knolleary/PubSubClient@^2.8
