MQTT improved; Basic sensor;

--- a/platformio/platformio.ini
+++ b/platformio/platformio.ini
@@ -10,12 +10,18 @@
 
 [env]
 monitor_speed = 115200
+build_flags = 
+	-include "include/config.h"
+lib_deps = knolleary/PubSubClient@^2.8
 
 [env:megaatmega2560]
 board = megaatmega2560
 platform = atmelavr
 framework = arduino
 upload_port = /dev/ttyUSB0
-build_flags = 
-	-include "include/config.h"
-lib_deps = knolleary/PubSubClient@^2.8
+
+; [env:uno]
+; board = uno
+; platform = atmelavr
+; framework = arduino
+; upload_port = /dev/ttyUSB0
